@@ -1,9 +1,17 @@
+2009-07-23  Joe Mistachkin  <joe@mistachkin.com>
+
+	* generic/tclNotify.c: Fix for [Bug 2820349].
+
 2009-07-22  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* macosx/tclMacOSXFCmd.c: CONST -> const
 	* generic/tclGetDate.y:
 	* generic/tclDate.c:
 	* generic/tclLiteral.c: (char *) cast in ckfree call
+	* generic/tclPanic.c: Feature Request 2814786: remove TclpPanic
+	* generic/tclInt.h
+	* unix/tclUnixPort.h
+	* win/tclWinPort.h
 
 2009-07-22 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
